tests/__snapshots__/validation-configFile-wrong-option-value-type-stderr.snap.txt
Error: Option 'failFast' requires an argument of type boolean.

  1 | {
> 2 |   "failFast": "always"
    |               ^
  3 | }

      at ./tstyche.config.json:2:15

